secree things removed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.application.name=appdev
 
-spring.datasource.url=jdbc:postgresql://dpg-d21ouebe5dus738uqjd0-a.oregon-postgres.render.com/app_dev_epwk
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
-spring.datasource.username=admin
-spring.datasource.password=80DxougxJ09MENviKJ0M2Pnyr1eHDs15
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 server.port=${PORT:10000}
-
